--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -57,6 +57,7 @@
 .lists-left {
   display: flex;
   min-width: 200px;
+  align-items: center;
 
 }
 
@@ -74,7 +75,7 @@
 .lists-right {
   display: flex;
   list-style: none;
-  align-items: flex-end;
+  align-items: center;
 }
 
 
