--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,13 +4,13 @@
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
-      人生を変えるフリマアプリ
+      人と情報を繋ぐ
     </h2>
     <p class='service-explain'>
-      FURIMAはだれでもかんたんに出品・購入できる
+      connectは常に最新の医療部材情報を共有できる
     </p>
     <p class='service-explain'>
-      フリマアプリです
+      医療スタッフのためのアプリです
     </p>
     <div class='store-btn'>
       <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
@@ -65,16 +65,16 @@
   <%# 画面中央の「会員数日本一位」帯部分 %>
   <div class='ad-contents'>
     <h2 class='ad-title'>
-      会員数日本一位
+      臨床工学技士監修
     </h2>
     <p class='ad-explain'>
-      FURIMAは、フリマアプリで最も人気。
+      connectは元臨床工学技士が制作した
     </p>
     <p class='ad-explain'>
-      出品・購入回数も業界最多です！
+      現場の知識を詰め込んだ情報アプリです
     </p>
     <p class='ad-explain'>
-      ほしかったあの商品に出会えるかもしれません。
+      あなたの助けになれるかもしれません。
     </p>
     <div class='store-btn'>
       <%= link_to image_tag("https://linkmaker.itunes.apple.com/ja-jp/badge-lrg.svg?releaseDate=2011-09-21&kind=iossoftware&bubble=ios_apps", class:"apple-btn"), "#" %>
@@ -86,34 +86,34 @@
   <%# FURIMAの特徴 %>
   <div class='feature-contents'>
     <h2 class='title'>
-      FURIMAの特徴
+      connectの特徴
     </h2>
     <ul class='feature-lists'>
       <li class='list'>
         <%= image_tag "furima-intro04.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          簡単に売り買いできる
+          簡単に医療部材の情報を検索できる
         </h3>
         <p class='feature-list-description'>
-          スマホひとつで、いつでもどこでも簡単に出品・購入が可能！
+          ネット環境があれば、病院でもどこでも情報の検索が可能！
         </p>
       </li>
       <li class='list'>
         <%= image_tag "furima-intro05.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          売上金は即日振込みに対応
+          チャット機能も完備
         </h3>
         <p class='feature-list-description'>
-          午前9時までに振込を依頼いただければ、翌日に指定の口座に入金いたします。
+          聞きたい情報があればいつでも相談可能
         </p>
       </li>
       <li class='list'>
         <%= image_tag "furima-intro06.png", class:"list-pict" %>
         <h3 class='feature-list-text'>
-          様々な支払いに対応
+          掲示板機能も完備
         </h3>
         <p class='feature-list-description'>
-          お支払いは、クレジットカードだけでなく、ポイントや売上金など多彩な方法があります。
+          トップページで新しい情報があればお知らせする事も可能
         </p>
       </li>
     </ul>
