--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -29,7 +29,7 @@
     <p class="or-text">or</p>
     <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
     <% else %>
-    <%= link_to "問い合わせる", "#" ,class:"item-red-btn"%>
+    <%= link_to "問い合わせる", new_room_path ,class:"item-red-btn"%>
     <% end %>
     <% end %>
 
